[project]
name = "reinforcement-learning-strategy"
version = "0.1.0"
description = "离散动作空间 OPS-DeMo 复现项目，使用 PPO 训练 Predator-Prey 策略库和响应策略库。"
requires-python = ">=3.10,<3.13"
dependencies = [
    "gymnasium>=0.29,<1.1",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "stable-baselines3>=2.3",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

